plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

compileJava {
	options.compilerArgs << '-parameters'
}

group = 'com.mmc'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	//swagger ui
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
	//jjwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	//cache
	implementation 'org.springframework.boot:spring-boot-starter-cache'

	// OCR 관련
	implementation 'com.google.cloud:google-cloud-bigquery:2.22.0'
	implementation 'com.google.cloud:google-cloud-vision:3.3.0'
	// gcp storage 의존성
	implementation 'com.google.cloud:google-cloud-storage:2.9.0'
	implementation 'com.google.api-client:google-api-client:1.31.1'

	//JSON 처리
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	implementation 'org.json:json:20231013' //JsonObject 사용 관련
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.1' //Jackson - ObjectMapper 시간 직렬화 관련

	// S3 관련
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// FCM
	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.2.0'
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.12.0'

	// KOMORAN
	implementation 'com.github.shin285:KOMORAN:3.3.9'
}

tasks.named('test') {
	useJUnitPlatform()
}
